# trenitalia_tg

./: Cargo.toml  README.md
src/: main.rs  telegram.rs
