[package]
name = "trenitalia_cli"
version = "0.1.0"
authors = ["Michael Chelli <michaelchelli00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
trenitalia = "0.3"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.9"
percent-encoding = "2.1"