[package]
name = "trenitalia_tg"
version = "0.1.0"
authors = ["Michael Chelli <michaelchelli00@gmail.com>, Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
trenitalia = "0.3"
serde = "1.0"
serde_json = "1.0"
ureq = {version="2.5", features=["json"]}
percent-encoding = "2.2"
